--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="img/logo.png" alt="Photo">
     </header>
     <div id="corp">
-        <h1>Un titre</h1>
+        <h1>Un <span class="red">T</span>itre</h1>
         <div id="bleu">
             <p>bleu Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam eligendi mollitia doloribus ullam, praesentium maiores libero atque officiis nulla non laboriosam! Soluta aliquam ipsum minus cumque deleniti porro, modi laudantium.</p>
         </div>
